[package]
name = "idid"
version = "0.1.0"
edition = "2021"
about = "Record, edit, and view accomplishments."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.4", features = ["derive"] }
rev_lines = "0.3.0"
rstest = "0.18.2"
tempfile = "3.10.1"
