[package]
name = "idid"
version = "0.1.0"
edition = "2021"
description = "Record, edit, and view what you did."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
chrono = "0.4.35"
clap = { version = "4.5.4", features = ["derive"] }
rev_lines = "0.3.0"
rstest = "0.18.2"
tempfile = "3.10.1"
