[package]
name = "idid"
version = "0.1.0"
edition = "2021"
description = "Track, edit, and view what you did."
authors = ["Clinton James <clinton+rust@jidn.com>"]
license = "MIT"
homepage = "https://github.com/jidn/idid-rust"
repository = "https://github.com/jidn/idid-rust"
keywords = ["cli", "time", "tracking"]
categories = ["command-line-utilities"]
readme="README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idid"
edition = "2021"
crate-type = ["lib"]

[profile.release]
strip = true

[dependencies]
assert_approx_eq = "1.1.0"
chrono = "0.4.35"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
rev_lines = "0.3.0"
rstest = "0.18.2"
tempfile = "3.10.1"
